--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,3 +49,24 @@ thead {
 .span-end {
   background-color: yellow;
 }
+
+h3 {
+  font-size: 2.5em;
+  color: #858585;
+}
+
+.span-monitor {
+  background-image: url(../img/monitor.jpg);
+  background-size: 500px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  font-size: 1.5em;
+}
+
+.span-graph {
+  background-image: url(../img/graph.jpg);
+  background-size: 500px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  font-size: 1.5em;
+}
